syntax = "proto3";

package proto;
option go_package = "github.com/kapycluster/kapyserver/types/proto";

service KubeConfig {
    rpc GetKubeConfig(KubeConfigRequest) returns (KubeConfigData);
}

message KubeConfigRequest{}

message KubeConfigData {
    string kubeConfig = 1;
}
